Contact link and smoth scroll

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -12,6 +12,10 @@
   }
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Inter Variable', sans-serif;
   color: rgb(var(--foreground-rgb));
