--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -45,11 +45,14 @@ body {
 
 // collaps div animation
 .collaps {
-  transition: max-height 0.3s ease-in-out;
+  transition: max-height 0.5s ease-in-out, opacity 0.6s ease-in-out;
   max-height: 0;
+  opacity: 0;
   overflow: hidden;
 }
 
 .collaps.open {
+  transition-duration: 0.5, 0.3;
   max-height: 1000px;
+  opacity: 1;
 }
