--- a/src/layouts/MainGridLayout.astro
+++ b/src/layouts/MainGridLayout.astro
@@ -22,6 +22,7 @@ interface Props {
   lang?: string;
   setOGTypeArticle?: boolean;
   headings?: MarkdownHeading[];
+  showSidebar?: boolean;
 }
 
 const {
@@ -31,6 +32,7 @@ const {
   lang,
   setOGTypeArticle,
   headings = [],
+  showSidebar = true,
 } = Astro.props;
 const hasBannerCredit =
   siteConfig.banner.enable && siteConfig.banner.credit.enable;
@@ -91,54 +93,68 @@ const mainPanelTop = siteConfig.banner.enable
   >
     <!-- The pointer-events-none here prevent blocking the click event of the TOC -->
     <div class="relative max-w-[var(--page-width)] mx-auto pointer-events-auto">
-      <div
-        id="main-grid"
-        class="transition duration-700 w-full left-0 right-0 grid grid-cols-[17.5rem_auto] grid-rows-[auto_1fr_auto] lg:grid-rows-[auto]
-    mx-auto gap-4 px-0 md:px-4"
-      >
-        <!-- Banner image credit -->
-        {
-          hasBannerCredit && (
-            <a
-              href={siteConfig.banner.credit.url}
-              id="banner-credit"
-              target="_blank"
-              rel="noopener"
-              aria-label="Visit image source"
+      <!-- Banner image credit -->
+      {
+        hasBannerCredit && (
+          <a
+            href={siteConfig.banner.credit.url}
+            id="banner-credit"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit image source"
+            class:list={[
+              "group onload-animation transition-all absolute flex justify-center items-center rounded-full " +
+                "px-3 right-4 -top-[3.25rem] bg-black/60 hover:bg-black/70 h-9",
+              { "hover:pr-9 active:bg-black/80": hasBannerLink },
+            ]}
+          >
+            <Icon
+              class="text-white/75 text-[1.25rem] mr-1"
+              name="material-symbols:copyright-outline-rounded"
+            />
+            <div class="text-white/75 text-xs">
+              {siteConfig.banner.credit.text}
+            </div>
+            <Icon
               class:list={[
-                "group onload-animation transition-all absolute flex justify-center items-center rounded-full " +
-                  "px-3 right-4 -top-[3.25rem] bg-black/60 hover:bg-black/70 h-9",
-                { "hover:pr-9 active:bg-black/80": hasBannerLink },
+                "transition absolute text-[oklch(0.75_0.14_var(--hue))] right-4 text-[0.75rem] opacity-0",
+                { "group-hover:opacity-100": hasBannerLink },
               ]}
-            >
-              <Icon
-                class="text-white/75 text-[1.25rem] mr-1"
-                name="material-symbols:copyright-outline-rounded"
-              />
-              <div class="text-white/75 text-xs">
-                {siteConfig.banner.credit.text}
-              </div>
-              <Icon
-                class:list={[
-                  "transition absolute text-[oklch(0.75_0.14_var(--hue))] right-4 text-[0.75rem] opacity-0",
-                  { "group-hover:opacity-100": hasBannerLink },
-                ]}
-                name="fa6-solid:arrow-up-right-from-square"
-              ></Icon>
-            </a>
-          )
-        }
+              name="fa6-solid:arrow-up-right-from-square"
+            ></Icon>
+          </a>
+        )
+      }
 
-        <SideBar
-          class="mb-4 row-start-2 row-end-3 col-span-2 lg:row-start-1 lg:row-end-2 lg:col-span-1 lg:max-w-[17.5rem] onload-animation"
-          headings={headings}
-        />
-
-        <main
-          id="swup-container"
-          class="transition-swup-fade col-span-2 lg:col-span-1 overflow-hidden"
+      <main
+        id="swup-container"
+        class="transition-swup-fade overflow-hidden px-0 md:px-4"
+      >
+        <div
+          id="main-grid"
+          class:list={[
+            "transition duration-700 w-full left-0 right-0 mx-auto gap-4",
+            showSidebar
+              ? "grid grid-cols-[17.5rem_auto] grid-rows-[auto_1fr_auto] lg:grid-rows-[auto]"
+              : "",
+          ]}
         >
-          <div id="content-wrapper" class="onload-animation">
+          {
+            showSidebar && (
+              <SideBar
+                class="mb-4 row-start-2 row-end-3 col-span-2 lg:row-start-1 lg:row-end-2 lg:col-span-1 lg:max-w-[17.5rem] onload-animation"
+                headings={headings}
+              />
+            )
+          }
+
+          <div
+            id="content-wrapper"
+            class:list={[
+              "onload-animation",
+              showSidebar ? "col-span-2 lg:col-span-1" : "",
+            ]}
+          >
             <!-- the overflow-hidden here prevent long text break the layout-->
             <!-- make id different from windows.swup global property -->
             <slot />
@@ -146,12 +162,12 @@ const mainPanelTop = siteConfig.banner.enable
               <Footer />
             </div>
           </div>
-        </main>
 
-        <div class="footer col-span-2 onload-animation block lg:hidden">
-          <Footer />
+          <div class="footer col-span-2 onload-animation block lg:hidden">
+            <Footer />
+          </div>
         </div>
-      </div>
+      </main>
 
       <BackToTop />
     </div>
