--- a/src/layouts/MainGridLayout.astro
+++ b/src/layouts/MainGridLayout.astro
@@ -9,38 +9,38 @@ import ImageWrapper from "../components/misc/ImageWrapper.astro";
 import TOC from "../components/widget/TOC.astro";
 import { siteConfig } from "../config";
 import {
-  BANNER_HEIGHT,
-  BANNER_HEIGHT_EXTEND,
-  MAIN_PANEL_OVERLAPS_BANNER_HEIGHT,
+	BANNER_HEIGHT,
+	BANNER_HEIGHT_EXTEND,
+	MAIN_PANEL_OVERLAPS_BANNER_HEIGHT,
 } from "../constants/constants";
 import Layout from "./Layout.astro";
 
 interface Props {
-  title?: string;
-  banner?: string;
-  description?: string;
-  lang?: string;
-  setOGTypeArticle?: boolean;
-  headings?: MarkdownHeading[];
-  showSidebar?: boolean;
+	title?: string;
+	banner?: string;
+	description?: string;
+	lang?: string;
+	setOGTypeArticle?: boolean;
+	headings?: MarkdownHeading[];
+	showSidebar?: boolean;
 }
 
 const {
-  title,
-  banner,
-  description,
-  lang,
-  setOGTypeArticle,
-  headings = [],
-  showSidebar = true,
+	title,
+	banner,
+	description,
+	lang,
+	setOGTypeArticle,
+	headings = [],
+	showSidebar = true,
 } = Astro.props;
 const hasBannerCredit =
-  siteConfig.banner.enable && siteConfig.banner.credit.enable;
+	siteConfig.banner.enable && siteConfig.banner.credit.enable;
 const hasBannerLink = !!siteConfig.banner.credit.url;
 
 const mainPanelTop = siteConfig.banner.enable
-  ? `calc(${BANNER_HEIGHT}vh - ${MAIN_PANEL_OVERLAPS_BANNER_HEIGHT}rem)`
-  : "5.5rem";
+	? `calc(${BANNER_HEIGHT}vh - ${MAIN_PANEL_OVERLAPS_BANNER_HEIGHT}rem)`
+	: "5.5rem";
 ---
 
 <Layout
@@ -128,7 +128,7 @@ const mainPanelTop = siteConfig.banner.enable
 
       <main
         id="swup-container"
-        class="transition-swup-fade overflow-hidden px-0 md:px-4"
+        class="transition-swup-fade px-0 md:px-4"
       >
         <div
           id="main-grid"
