--- a/src/components/portfolio/ProjectsSectionWindow.astro
+++ b/src/components/portfolio/ProjectsSectionWindow.astro
@@ -12,9 +12,9 @@ const { project } = Astro.props;
 <WindowBox title={project.name}>
 	<code class="font-mono text-xs md:text-sm lg:text-base">
 		<div class="blink">
-			<span class="mr-2 text-pink-500">const</span>
+			<span class="mr-2 text-[var(--primary)]">const</span>
 			<span class="mr-2 text-white">project</span>
-			<span class="mr-2 text-pink-500">=</span>
+			<span class="mr-2 text-[var(--primary)]">=</span>
 			<span class="text-gray-400">{"{"}</span>
 		</div>
 		<div>
