--- a/src/components/portfolio/WindowBox.astro
+++ b/src/components/portfolio/WindowBox.astro
@@ -23,7 +23,7 @@ const { title, class: className } = Astro.props;
 			<div class="h-2 w-2 lg:h-3 lg:w-3 rounded-full bg-orange-400" />
 			<div class="h-2 w-2 lg:h-3 lg:w-3 rounded-full bg-green-200" />
 		</div>
-		<p class="text-center font-semibold ml-3 text-pink-500 text-base lg:text-xl">
+		<p class="text-center font-semibold ml-3 text-[var(--primary)] text-base lg:text-xl">
 			{title}
 		</p>
 	</div>
