--- a/src/layouts/MainGridLayout.astro
+++ b/src/layouts/MainGridLayout.astro
@@ -151,6 +151,7 @@ const mainPanelTop = siteConfig.banner.enable
           <div
             id="content-wrapper"
             class:list={[
+              "min-w-0",
               "onload-animation",
               showSidebar ? "col-span-2 lg:col-span-1" : "",
             ]}
