--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -23,7 +23,9 @@ define(vars)
         {key}: value[1]
 
 define({
-  --primary: oklch(0.70 0.14 var(--hue)) oklch(0.75 0.14 var(--hue))
+  --primary: oklch(0.70 0.30 var(--hue)) oklch(0.75 0.30 var(--hue))
+  // secundary is opposite of primary 
+  --secondary: oklch(0.70 0.30 calc(150 - var(--hue))) oklch(0.75 0.30 calc(150 - var(--hue)))
   --page-bg: oklch(0.95 0.01 var(--hue)) oklch(0.16 0.014 var(--hue))
   --card-bg: white oklch(0.23 0.015 var(--hue))
 
