--- a/src/components/control/Pagination.astro
+++ b/src/components/control/Pagination.astro
@@ -4,9 +4,9 @@ import { Icon } from "astro-icon/components";
 import { url } from "../../utils/url-utils";
 
 interface Props {
-  page: Page;
-  class?: string;
-  style?: string;
+	page: Page;
+	class?: string;
+	style?: string;
 }
 
 const { page, style } = Astro.props;
@@ -23,17 +23,17 @@ let count = 1;
 let l = page.currentPage;
 let r = page.currentPage;
 while (0 < l - 1 && r + 1 <= page.lastPage && count + 2 <= VISIBLE) {
-  count += 2;
-  l--;
-  r++;
+	count += 2;
+	l--;
+	r++;
 }
 while (0 < l - 1 && count < VISIBLE) {
-  count++;
-  l--;
+	count++;
+	l--;
 }
 while (r + 1 <= page.lastPage && count < VISIBLE) {
-  count++;
-  r++;
+	count++;
+	r++;
 }
 
 let pages: number[] = [];
@@ -46,8 +46,8 @@ if (r === page.lastPage - 2) pages.push(page.lastPage - 1);
 if (r < page.lastPage) pages.push(page.lastPage);
 
 const getPageUrl = (p: number) => {
-  if (p === 1) return "/blog/";
-  return `/blog/${p}/`;
+	if (p === 1) return "/blog/";
+	return `/blog/${p}/`;
 };
 ---
 
@@ -66,7 +66,7 @@ const getPageUrl = (p: number) => {
     <Icon name="material-symbols:chevron-left-rounded" class="text-[1.75rem]" />
   </a>
   <div
-    class="bg-[var(--card-bg)] flex flex-row rounded-lg items-center text-neutral-700 dark:text-neutral-300 font-bold"
+    class="flex flex-row gap-2 rounded-lg items-center text-neutral-700 dark:text-neutral-300 font-bold"
   >
     {
       pages.map((p) => {
