--- a/src/components/portfolio/HeroSection.astro
+++ b/src/components/portfolio/HeroSection.astro
@@ -22,7 +22,7 @@ const socialIcons: Record<string, string> = {
 
 	<div class="grid grid-cols-1 items-start lg:grid-cols-2 lg:gap-12 gap-y-8 relative z-10">
 		{/* Left side - Text content */}
-		<div class="flex flex-col items-start justify-center p-2 pb-20 md:pb-10 lg:pt-10 bg-black/80 backdrop-blur-sm rounded-lg">
+		<div class="flex flex-col items-start justify-center p-2 pb-20 md:pb-10 lg:pt-10 bg-black/80 backdrop-blur-sm rounded-lg border border-[#1b2c68a0] bg-gradient-to-r from-[#0d1224] to-[#0a0d37] px-4 lg:px-8">
 			<h1 class="text-3xl leading-10 text-white lg:text-[2.6rem] lg:leading-[3.5rem]">
 				This is
 				<span class="font-semibold text-[var(--primary)]">
