--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,15 +1,24 @@
 ---
 import MainGridLayout from "@layouts/MainGridLayout.astro";
+import ProjectGlowCard from "@components/portfolio/ProjectGlowCard.astro";
+import { personalProjects } from "@/data/personal-projects";
 ---
-
 
 <MainGridLayout banner="assets/images/banner2.png" title="Projects" description="Projects" lang="en" setOGTypeArticle={true} headings={[]}>
   <div class="flex w-full rounded-[var(--radius-large)] overflow-hidden relative mb-4">
-    <div id="post-container" class:list={["card-base z-10 px-6 md:px-9 pt-6 pb-4 relative w-full ",
-            {}
-        ]}>
-        <div class="text-2xl font-bold">Projects soon...</div>
-      
+    <div id="post-container" class:list={["card-base z-10 px-4 md:px-9 pt-6 pb-6 relative w-full ", {}]}>
+      <div class="flex flex-col gap-6">
+        {personalProjects.map((project) => (
+          <ProjectGlowCard project={project} />
+        ))}
+      </div>
     </div>
   </div>
 </MainGridLayout>
+
+<script>
+  import { initGlowCards } from "@/scripts/glow-cards";
+
+  initGlowCards();
+  document.addEventListener("astro:after-swap", initGlowCards);
+</script>
